--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,8 +19,31 @@ h2 {
   height: 8rem;
   margin: 1rem 35%;
   border: 1px solid #000;
+  border-radius: 25%;
+
+  font-size: 1.7rem;
+  letter-spacing: 0.2rem;
+  text-shadow: 1.3px 0 0 #000, -1.3px 0 0 #000, 0 1.3px 0 #000, 0 -1.3px 0 #000;
+  color: #fff;
 }
 
 .color-div {
   text-align: center;
+}
+
+input {
+  border-radius: 40%;
+}
+
+li {
+  display: inline-block;
+  text-align: center;
+  list-style: none;
+  font-size: 1.3rem;
+  color: snow;
+  text-shadow: 1px 0 0 #000, -1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000,
+    1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+
+  margin: 5px;
+  padding: 4px;
 }
